--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </tr>
     </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Hobbies.html">My Hobbies</a>
   <a href="Contact-me.html">Contact Me</a>
 </body>
 
